--- a/_includes/nav_jekyll.html
+++ b/_includes/nav_jekyll.html
@@ -1,8 +1,7 @@
 <table>
     <tr>
-        <td><img src="static/assets/ncs_logo.png" height="60" alt=""> </td>
         <td><a href=".">Home</a></td>
-        <td><a href="CONTRIBUTING">Contribution Policy</a></td>
+        <td><a href="CONTRIBUTING.md">Contribution Policy</a></td>
         <td><a href=".">About</a></td>
     </tr>
 </table>
