--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -43,7 +43,11 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bpranav.dogs') }}">Dogs Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bpranav.birds') }}">Birds Adoption</a>
+                    <a class="dropdown-item" href="{{ url_for('bchase.cats') }}">Cat Adoption</a>
                 </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link" href={{ url_for('bchase.habitats') }}>Habitats</a>
             </li>
 
         </div>
