--- a/templates/Habitats.html
+++ b/templates/Habitats.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 {% extends "layouts/base.html" %}
-{% block head %}
+{%block head %}
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Habitats</title>
+
+    </head>
+{%endblock%}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Habitats and Enclosures</title>
-</head>
+
+{% block body %}
 <body>
+<table>
+    <tbody>
+    <tr><td>{{ sussy[0][0]    }} </td><td> {{  sussy[0][1]   }} </td><td>{{ sussy[0][2] }}</td></tr>
+    <tr><td>{{ sussy[1][0]    }} </td><td> {{  sussy[1][1]   }} </td><td>{{ sussy[1][2] }}</td></tr>
+    <tr><td>{{ sussy[2][0]    }} </td><td> {{  sussy[2][1]   }} </td><td>{{ sussy[2][2] }}</td></tr>
+    <tr><td>{{ sussy[3][0]    }} </td><td> {{  sussy[3][1]   }} </td><td>{{ sussy[3][2] }}</td></tr>
+    </tbody>
+</table>
 
 </body>
+{%endblock%}
 </html>
