--- a/_includes/nav_jekyll.html
+++ b/_includes/nav_jekyll.html
@@ -1,8 +1,16 @@
-<table>
-    <tr>
-        <td><a href=".">Home</a></td>
-        <td><a href="CONTRIBUTING.md">Contribution Policy</a></td>
-        <td><a href=".">About</a></td>
-    </tr>
-</table>
+<nav>
+    <ul>
+        <li><a href=".">Home</a></li>
+        <li><a href="CONTRIBUTING">Contributing</a></li>
+        <li><a href=".">About</a></li>
+    </ul>
+</nav>
 <hr>
+
+
+<style>
+    ul {
+        display: flex;
+        justify-content: space-between;
+    }
+</style>
