--- a/_includes/nav_jekyll.html
+++ b/_includes/nav_jekyll.html
@@ -1,5 +1,5 @@
 <nav>
-    <ul>
+    <ul class="navList" style="display: flex; justify-content: space-between">
         <li><a href=".">Home</a></li>
         <li><a href="CONTRIBUTING">Contributing</a></li>
         <li><a href=".">About</a></li>
@@ -8,10 +8,11 @@
 <hr>
 
 
-<style>
-    nav ul {
+<!-- <style>
+/*     .navList {
         display: flex;
         justify-content: space-between;
 
-    }
+    } */
 </style>
+ -->
