Fixed Crud and Search not showing up

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,7 +14,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <li class="nav-item dropdown">
                 <a class="nav-link" href="/mainabout">Project Green<span class="sr-only">(current)</span></a>
             </li>
-                <a class="nav-link" href="/mainabout">World Clock<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/worldclock">World Clock<span class="sr-only">(current)</span></a>
             </li>
                 <a class="nav-link" href="/translator">Language Translator<span class="sr-only">(current)</span></a>
             </li>
@@ -25,7 +25,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <a class="nav-link" href="/weather">Weather<span class="sr-only">(current)</span></a>
             </li>
                 <a class="nav-link" href="/feedback">Give Us Feedback!<span class="sr-only">(current)</span></a>
-                </div>
+            </li>
+                <a class="nav-link" href="/crud">Crud<span class="sr-only">(current)</span></a>
+            </li>
+                <a class="nav-link" href="/search">Search<span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
