link to blueprint in about page

--- a/templates/aboutdaniel.html
+++ b/templates/aboutdaniel.html
@@ -35,6 +35,8 @@
             <a href="https://docs.google.com/document/d/1243B2mbRGslTk-0YRXKdKykfs6fAU5pK1LFUyJQ83vM/edit">Create Task Planning</a>
             <br>
             <a href="https://docs.google.com/document/d/12rQvrhtsNnlDFDhkCI9sT8w7fTD3y-4FW6W8LPLuf9w/edit">Journal</a>
+            <br>
+            <a href="https://docs.google.com/document/d/10t3g7Bj8szfaAFH1DEJqET9pDukgxZfRU0R14TBfsP0/edit?usp=sharing">Blueprint files</a>
             <script>
                 async function getAstroNews() {
                     const response = await fetch("https://space-news.p.rapidapi.com/news/guardian", {
