--- a/templates/Habitats.html
+++ b/templates/Habitats.html
@@ -14,10 +14,10 @@
 <body>
 <table>
     <tbody>
-    <tr><td>{{ sussy[0][0]    }} </td><td> {{  sussy[0][1]   }} </td><td>{{ sussy[0][2] }}</td></tr>
-    <tr><td>{{ sussy[1][0]    }} </td><td> {{  sussy[1][1]   }} </td><td>{{ sussy[1][2] }}</td></tr>
-    <tr><td>{{ sussy[2][0]    }} </td><td> {{  sussy[2][1]   }} </td><td>{{ sussy[2][2] }}</td></tr>
-    <tr><td>{{ sussy[3][0]    }} </td><td> {{  sussy[3][1]   }} </td><td>{{ sussy[3][2] }}</td></tr>
+    <tr><td>{{ habitat[0][0]    }} </td><td> {{  habitat[0][1]   }} </td><td>{{ habitat[0][2] }}</td></tr>
+    <tr><td>{{ habitat[1][0]    }} </td><td> {{  habitat[1][1]   }} </td><td>{{ habitat[1][2] }}</td></tr>
+    <tr><td>{{ habitat[2][0]    }} </td><td> {{  habitat[2][1]   }} </td><td>{{ habitat[2][2] }}</td></tr>
+    <tr><td>{{ habitat[3][0]    }} </td><td> {{  habitat[3][1]   }} </td><td>{{ habitat[3][2] }}</td></tr>
     </tbody>
 </table>
 
