--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -47,7 +47,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href={{ url_for('bchase.habitats') }}>Habitats</a>
+                <a class="nav-link" href={{ url_for('bchase.Enclosures') }}>Enclosures</a>
             </li>
 
         </div>
