--- a/_includes/nav_jekyll.html
+++ b/_includes/nav_jekyll.html
@@ -1,7 +1,7 @@
 <nav>
     <ul class="navList" style="display: flex; justify-content: space-between">
         <li><a href=".">Home</a></li>
-        <li><a href="CONTRIBUTING">Contributing</a></li>
+        <li><a href="about">Contributing</a></li>
         <li><a href="about">About</a></li>
 
     </ul>
