--- a/templates/aboutpages/brian.html
+++ b/templates/aboutpages/brian.html
@@ -29,7 +29,7 @@
         </style>
         </p>
     <div>
-        <img id="MaskOn" src="../static/brian_maskon.jpeg/" style="max-height: 500px;" class="center">
+        <img id="MaskOn" src="../../static/brian_maskon.jpeg" style="max-height: 500px;" class="center">
         <style>
             .center {
                 display: block;
