added background color added the main title

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,24 @@
 
 <h1 id="mainheader"> Expeditions </h1>
 
+<style>
+    html,body{
+        background-color: #B99976;
+    }
+    #mainheader {
+    position: absolute;
+    top: 5%;
+    font-size:250px;
+    padding-top: 130px;
+    selfalign: center;
+    left: 40px;
+    color: black;
+    font-family: "Times New Roman";
+}
+
+</style>
+
+
 {% endblock %}
 
 
