added to navbar and changed database

--- a/crud3/templates/crud/search.html
+++ b/crud3/templates/crud/search.html
@@ -2,7 +2,9 @@
 <!-- Preparing search using asynchronous "fetch" (no page reload, no wait)
 inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 -->
-{% extends "layouts/base.html" %}
+{% include "layouts/navbar.html" %}
+<title>Stress Relief</title>
+<body style="font-family: Baskerville" </body>
 
 {% block meta %}
     <title>SQL search</title>
