--- a/templates/dark.html
+++ b/templates/dark.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+
+{% include "layouts/navbar.html" %}
+<title>Dark Mode</title>
+<body style="font-family: Baskerville" </body>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
