--- a/templates/linda.html
+++ b/templates/linda.html
@@ -1,12 +1,10 @@
-<!-- Extending the predefined project layout -->
-{% extends "layouts/base.html" %}
-
-<!- This variable sets name of browser tab  -->
-{% set project = "Punnu" %}
+<body>
+{% include "layouts/navbar.html" %}
+<title>Punnu</title>
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-
+<br>
 <center><h1 style="font-family: 'Roboto Thin'">Punarvasu Sangam Individual Page</h1></center>
 
 <body style="background-color: #EBF7FA;">
