--- a/templates/sonakshi.html
+++ b/templates/sonakshi.html
@@ -1,8 +1,6 @@
-<!-- Extending the predefined project layout -->
-{% extends "layouts/base.html" %}
-
-<!- This variable sets name of browser tab  -->
-{% set project = "Stubby" %}
+<body>
+{% include "layouts/navbar.html" %}
+<title>Sonakshi</title>
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
