--- a/templates/stress.html
+++ b/templates/stress.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-{% extends "layouts/project.html" %}
+<body>
+{% include "layouts/navbar.html" %}
+<title>Stress Relief</title>
+<body style="font-family: Baskerville" </body>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +20,7 @@
   margin: 4px 2px;
   cursor: pointer;
 }
-.button1 {background-color: #4CAF50;} /* Green */
+.button1 {background-color: #F5B7B1;} /* Green */
 </style>
 {%  block body %} <!-- Code from Punnu -->
 <body>
