--- a/templates/study.html
+++ b/templates/study.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-{% extends "layouts/base.html" %}
+<body>
+{% include "layouts/navbar.html" %}
+<title>Study Hall</title>
+<body style="font-family: Baskerville" </body>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
