--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-{% extends "layouts/project.html" %}
+<body>
+{% include "layouts/navbar.html" %}
+<title>Volunteer Oppurtunities</title>
+<body style="font-family: Baskerville" </body>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
