--- a/crud3/templates/crud/crud.html
+++ b/crud3/templates/crud/crud.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+<body>
+{% include "layouts/navbar.html" %}
+<title>Find Tutor</title>
 
-<!-- EXTEND (layout.html), this is a template for all rendered pages in the project -->
-{% extends "layouts/base.html" %}
+<!- This is a replacement block for Body in base.html -->
+{% block body %}
 
-<!-- CONTENT (in <head>), content for this page -->
-{% block meta %}
-    <title>CRUD page</title>
+    <title>Find Tutors to Help!</title>
+    <body style="font-family: Baskerville" </body>
 
     <!-- Password verification and error message -->
     <script>
@@ -16,12 +18,10 @@
         document.addEventListener("DOMContentLoaded", function(){
             // event listener fires when the DOM is fully loaded. This way you can write scripts that are before the elements are loaded into the dom, but waits to be added to the page until the dom is fully loaded.
 
-            document.querySelector('#create').addEventListener('submit', verifyPassword );
             //querySelector selects elements with CSS selectors. id="create" gets selected with the code above.
 
             // pulled this function in here to keep it private from the window object/global scope. This is one way to protect your variables and functions from being hijacked by xss. Declared function names do act like variables in a way.
 
-            function verifyPassword(event) {
                 /*
                 because this is being called by an event, the event object is automatically
                 passed and captured as seen above. We are capturing it with the 'event' parameter in this function.
@@ -30,11 +30,7 @@
                 Name your variables well, my friends.
                 */
 
-                const psw =  document.getElementById("password").value;
 
-                if (psw.length < 6 || psw.length > 20) {
-                    document.getElementById("pswError").innerHTML = "Password must be between 6 and 20 characters";
-                    event.preventDefault();
                     //prevents submission of form when password length is not valid.
                 }
 
@@ -45,20 +41,19 @@
         }); //end DOMContentLoaded listener
 
     </script>
-{% endblock %}
 
 <!-- CONTENT (in <body>), content for this page -->
-{% block body %}
-    <div class="container py-4 text-light bg-success">
+
+    <div class="container py-4 text-light bg-dark" >
         <header class="pb-3 mb-4 border-bottom">
             <div class="d-flex align-items-center text-light text-decoration-none">
-                <span class="fs-4">SQL CRUD Admin Page</span>
+                <span class="fs-4">Find Tutors :)</span>
             </div>
         </header>
 
         <div class="container py-4">
-            <div class="p-5 mb-4 bg-light text-dark rounded-3">
-                <h2>Table Viewer</h2>
+            <div class="p-5 mb-4 m-5 bg-light text-dark rounded-3">
+                <h2>Find Tutors to Help!</h2>
                 <div class="row align-items-md-stretch">
                     <table class="table">
                         <tbody>
@@ -76,11 +71,10 @@
                         <table class="table">
                             <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Password</th>
-                                <th>Phone</th>
+                                <th>Number</th>
+                                <th>Tutor</th>
+                                <th>Tutors Email</th>
+                                <th>Tutor's Phone Number</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -96,7 +90,6 @@
                                     <td>{{ row['userID'] }}</td>
                                     <td>{{ row['name'] }}</td>
                                     <td>{{ row['email'] }}</td>
-                                    <td>{{ row['password'] }}</td>
                                     <td>{{ pnf }}</td>
                                 </tr>
                             {% endfor %}
@@ -110,15 +103,14 @@
 
 
         <div class="container py-4">
-            <div class="p-5 mb-4 bg-light text-dark rounded-3">
-                <h2>Create a new record</h2>
+            <div class="p-5 mb-4 m-5 bg-light text-dark rounded-3">
+                <h2>Are You a Tutor? Input Your Contact Information Here!</h2>
                 <form method="POST" ID="create" action={{url_for('crud.create')}} >
                     <table class="table">
                         <thead>
                         <tr>
                             <th><label for="name">Name</label></th>
                             <th><label for="email">Email</label></th>
-                            <th><label for="password">Password</label></th>
                             <th><label for="phone">Phone</label></th>
                         </tr>
                         </thead>
@@ -126,7 +118,6 @@
                         <tr>
                             <td><input type="text" name="name" id="name" required></td>
                             <td><input type="email" name="email" id="email" placeholder="abc@xyz.org" required></td>
-                            <td><input type="password" name="password" id="password" required></td>
                             <td><input type="tel" name="phone" id="phone" pattern="[0-9]{10}" placeholder="1234567890" required></td>
                             <td><input type="submit" value="Create"></td>
                         </tr>
@@ -138,12 +129,12 @@
 
         </div>
 
-        <div class="container py-4">
+        <div class="container py-4 ">
 
-            <div class="row mb-4 bg-light text-dark rounded-3">
+            <div class="row mb-4 m-5 bg-light text-dark rounded-3">
 
                 <div class="col-md-3">
-                    <div class="p-5 mb-4 bg-light text-dark rounded-3">
+                    <div class="p-5 mb-4 m-5 bg-light text-dark rounded-3">
                         <h2>Read</h2>
                         <form method="POST" ID="read" action={{url_for('crud.read')}} >
                             <table id="read_table">
@@ -167,8 +158,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
-                    <div class="p-5 mb-4 bg-light text-dark rounded-3">
+                <div class="col-md-6 ">
+                    <div class="p-5 mb-4 m-5 bg-light text-dark rounded-3">
                         <h2>Update</h2>
                         <form method="POST" ID="update" action={{url_for('crud.update')}} >
                             <table id="update_table">
@@ -195,7 +186,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <div class="p-5 mb-4 bg-light text-dark rounded-3">
+                    <div class="p-5 mb-4 m-5 bg-light text-dark rounded-3">
                         <h2>Delete</h2>
                         <form method="POST" ID="read" action={{url_for('crud.delete')}} >
                             <table id="read_table">
@@ -223,22 +214,5 @@
 
     </div>
 
-    <!-- Back end SQL data definition code (SQLalchemy) -->
-    <div class="container py-4">
-        <h1 id="BE-MODEL">Back End Definition Code (Model) </h1>
-        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fnighthawkcoders%2Fnighthawk_csp%2Fblob%2Fmaster%2Fcrud%2Fmodel.py&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
-    </div>
-
-    <!-- Front End HTML, shows this file -->
-    <div class="container py-4">
-        <h1 id="FE-VIEW">Front End HTML Code (View) </h1>
-        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fnighthawkcoders%2Fnighthawk_csp%2Fblob%2Fmaster%2Fcrud%2Ftemplates%2Fcrud%2Fcrud.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
-    </div>
-
-    <!-- Back Route code -->
-    <div class="container py-4">
-        <h1 id="BE-CONTROL">Back End Form Request and API Code (Control)</h1>
-        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fnighthawkcoders%2Fnighthawk_csp%2Fblob%2Fmaster%2Fcrud%2Fapp_crud.py&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
-    </div>
 
 {% endblock %}
