--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -5,6 +5,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 <style>
     .navbar{
         max-height: 75px;
+        margin;
     }
     .logo-image{
         width: 75px;
@@ -14,7 +15,14 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 
     }
 </style>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #C9EEF7;">
+
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+
+</head>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #C9EEF7; font-family: Baskerville">
     <div class="logo-image">
         <img src="/static/assets/shreyaimages/logoimage.png"" class="img-fluid">
     </div>
@@ -23,24 +31,32 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
-            <a class="nav-link" href={{ url_for('home') }}>Home</a>
-            <a class="nav-link" href={{ url_for('sonakshi') }}>Sonakshi</a>
-            <a class="nav-link" href={{ url_for('khushi') }}>Khushi</a>
-            <a class="nav-link" href={{ url_for('shreya') }}>Shreya</a>
-            <a class="nav-link" href={{ url_for('linda') }}>Punnu</a>
-            <a class="nav-link" href={{ url_for('dark') }}>Dark Mode Switch Test</a>
-            <a class="nav-link" href={{ url_for('search') }}>Search</a>
 
-            <html>
-            <head>
-                <meta name="viewport" content="width=device-width, initial-scale=1">
-                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-            </head>
-        </div>
+
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('crud') }}">Find Tutors</a></li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" id="dropdownMenuButton1" type="button">
+                    Greet Dropdowns
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <a class="dropdown-item" href="{{ url_for('shreya') }}">Shreya</a>
+                    <a class="dropdown-item" href="{{ url_for('sonakshi') }}">Sonakshi</a>
+                    <a class="dropdown-item" href="{{ url_for('linda') }}">Punnu</a>
+                    <a class="dropdown-item" href="{{ url_for('khushi') }}">Khushi</a>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('stress') }}">Stress Relief</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('study') }}">Study Resources</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('volunteer') }}">Volunteer!</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('search') }}">Search</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('dark') }}">Dark Mode</a></li>
+
+    </div>
+
+            </li>
+
+        </ul>
     </div>
 </nav>
+</body>
+</html>
