--- a/_includes/nav_jekyll.html
+++ b/_includes/nav_jekyll.html
@@ -3,6 +3,7 @@
         <li><a href=".">Home</a></li>
         <li><a href="contributing">Contributing</a></li>
         <li><a href="about">About</a></li>
+        <li><a href="guidelines">Guidelines</a></li>
 
     </ul>
 </nav>
