--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -55,8 +55,14 @@
                     <a class="dropdown-item" href="{{ url_for('bchase.Enclosures') }}">Enclosures</a>
                 </div>
             </li>
-
-        </div>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Learn!
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('bconnor.PetInfo') }}">Pets Information</a>
+                </div>
+            </li>
 
     </div>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
