--- a/_includes/nav_jekyll.html
+++ b/_includes/nav_jekyll.html
@@ -1,9 +1,8 @@
 <nav>
     <ul class="navList" style="display: flex; justify-content: space-between">
         <li><a href=".">Home</a></li>
-        <li><a href="contributing">Contributing</a></li>
         <li><a href="about">About</a></li>
-        <li><a href="guidelines">Guidelines</a></li>
+        <li><a href="guidelines">Contributing Guidelines</a></li>
 
     </ul>
 </nav>
