--- a/_includes/nav_jekyll.html
+++ b/_includes/nav_jekyll.html
@@ -1,6 +1,6 @@
 <nav>
     <ul class="navList" style="display: flex; justify-content: space-between">
-        <li><img style="width: 30px; max-width: 100%" src="static/assets/study.png" alt="logo"></li>
+        <li><a href="."><img style="width: 30px; max-width: 100%" src="static/assets/study.png" alt="logo"></a></li>
         <li><a href=".">Home</a></li>
         <li><a href="about">About</a></li>
         <li><a href="guidelines">Contributing Guidelines</a></li>
